feat: add internal scroll

--- a/src/pages/single-job.html
+++ b/src/pages/single-job.html
@@ -24,7 +24,7 @@
                     </div>
                     <form action="" class="form invert" data-form>
                         <div class="columns columns--form-small mb-30">
-                            <div class="columns__col columns__col--6">
+                            <div class="columns__col columns__col--6 columns__col--tab-12 order-m-1">
                                 <label class="field">
                                     <p class="field__title">
                                         ФИО<strong>*</strong>
@@ -32,7 +32,7 @@
                                     <input type="text" class="field__input" placeholder="Укажите ФИО">
                                 </label>
                             </div>
-                            <div class="columns__col columns__col--6">
+                            <div class="columns__col columns__col--6 columns__col--tab-12 order-m-2">
                                 <label class="field">
                                     <p class="field__title">
                                         Телефон<strong>*</strong>
@@ -40,7 +40,7 @@
                                     <input type="text" class="field__input" placeholder="+7 (___) ___-__-__">
                                 </label>
                             </div>
-                            <div class="columns__col columns__col--6">
+                            <div class="columns__col columns__col--6 columns__col--tab-12 order-m-3">
                                 <label class="field">
                                     <p class="field__title">
                                         Почта<strong>*</strong>
@@ -48,30 +48,35 @@
                                     <input type="text" class="field__input" placeholder="Укажите почту">
                                 </label>
                             </div>
-                            <div class="columns__col columns__col--6">
+                            <div class="columns__col columns__col--6 columns__col--tab-12 order-m-4">
                                 <label class="input-file" data-input-file>
                                     <input type="file" class="input-file__field" data-input-file-field>
                                     <svg class="input-file__icon">
                                         <use xlink:href="./assets/sprite/sprite.svg#icon-clip"></use>
                                     </svg>
                                     <span class="input-file__text" data-input-file-caption>
-                                                Прикрепить файл<strong>*</strong>
-                                            </span>
+                                        Прикрепить файл<strong>*</strong>
+                                    </span>
                                 </label>
                             </div>
-                        </div>
-                        <button class="button invert mb-10">
+
+                            <div class="columns__col columns__col--12 pt-15 ptt-0 order-m-6">
+                                <button class="button invert">
                                     <span class="button__text">
                                         Отправить резюме
                                     </span>
-                        </button>
-                        <label class="agreement">
-                            <input type="checkbox" class="agreement__field">
-                            <div class="agreement__box"></div>
-                            <span class="agreement__text">
+                                </button>
+                            </div>
+                            <div class="columns__col columns__col--12 order-t-5">
+                                <label class="agreement">
+                                    <input type="checkbox" class="agreement__field">
+                                    <div class="agreement__box"></div>
+                                    <span class="agreement__text">
                                         Я согласен на обработку <a href="">персональных данных</a>
                                     </span>
-                        </label>
+                                </label>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
