--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -16,23 +16,19 @@
                     <img src="./assets/content/project-intro.jpg" alt="#">
                 </picture>
                 <div class="cover__content">
-                    <div class="columns">
-                        <div class="columns__col columns__col--5">
-                            <h1 class="title mb-10">
-                                Проектные перевозки
-                            </h1>
-                            <div class="editor fz-14 fz-mob-16 mb-20 mbm-30">
-                                <p>
-                                    Мы можем помочь вам перевезти тяжелый, <br class="tab-hidden">негабаритный и сложный груз
-                                </p>
-                            </div>
-                            <button class="button invert">
-                                <span class="button__text">
-                                    Оставить запрос
-                                </span>
-                            </button>
-                        </div>
+                    <h1 class="title mb-10">
+                        Проектные перевозки
+                    </h1>
+                    <div class="editor fz-14 fz-mob-16 mb-20 mbm-30">
+                        <p>
+                            Мы можем помочь вам перевезти тяжелый, <br class="tab-hidden">негабаритный и сложный груз
+                        </p>
                     </div>
+                    <button class="button button--regular invert">
+                        <span class="button__text">
+                            Оставить запрос
+                        </span>
+                    </button>
                 </div>
             </div>
         </div>
